--- a/static/styles.css
+++ b/static/styles.css
@@ -1,27 +1,34 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-}
-
-h1 {
-  text-align: center;
-}
-
-form {
+#upload-form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin: 2rem;
+}
+  
+#image-input {
+  font-size: 1.2rem;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
-input[type="file"] {
-  margin-bottom: 20px;
+button[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1.2rem;
+  padding: 1rem;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
+  
+button[type="submit"]:hover {
+  background-color: #224724;
 }
 
-button {
-  padding: 10px 20px;
-  background-color: #333;
-  color: #fff;
+#image-preview {
+  size: 40px;
+}
  
 
