--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,13 @@
         <h1>Welcome to Compressor AI</h1>
         <p id="web">Compress your images without compromising quality!</p>
         <form id="upload-form">
-            <input type="file" name="image" id="image-input" accept="image/*" required>
+            <input type="file" name="image" id="image-input" accept="image/*" multiple required>
             <button type="submit">Compress</button>
         </form>
 
         <div id="image-preview"></div>
+
+        <h2>Let's work together...</h2>
+        <p>To create amazing pictures</p>
     </section>
 {% endblock content %}
