--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css')}}">
+    
     {% if title %}
         <title>Compressor AI - {{ title }}</title>
     {% else %}
         <title>Compressor AI</title>
     {% endif %}
     <link rel="icon" href="{{ url_for('static', filename='Images/favicon2.png')}}" type="image/png">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='main.js')}}" defer></script>
     <script type="text/javascript" src="{{ url_for('static', filename='preview.js')}}" defer></script>
 </head>
@@ -22,6 +24,11 @@
                 <li><a href="{{ url_for(endpoint='about')}}">About</a></li>
             </ul>
         </nav>
+        <!-- Navbar Right Side -->
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+            <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+          </div>
     </header>
 
     <main role="main" class="container">
@@ -29,8 +36,6 @@
             {% block content %}{% endblock %}
         </div>
         <section id="contacts">
-            <h2>Let's work together...</h2>
-            <p>To create amazing pictures</p>
             <div id="social">
                 <p><img src="{{ url_for('static', filename='Images/facebook-5-512.png') }}" class="logo" alt="logo" width="50px" height="50px"> <a href="https://www.facebook.com/peter.kigan.7" target="_blank">facebook</a></p>
                 <p><img src="{{ url_for('static', filename='Images/github_PNG40.png')}}" class="logo" alt="logo" width="50px" height="50px"> <a href="https://github.com/keroti" target="_blank">github</a></p>
