--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,6 @@
         <div id="image-preview"></div>
         
         <h2>Let's work together...</h2>
-        <p>To create amazing pictures</p>
+        <p>To create amazing pictures.</p>
     </section>
 {% endblock content %}
