--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,13 @@
         <h1>Welcome to Compressor AI</h1>
         <p id="web">Compress your images without compromising quality!</p>
         <form id="upload-form">
-            <input type="file" name="image" id="image-input" accept="image/*" multiple required>
+            <input type="file" name="image" id="fileInput" accept="image/*" multiple required>
             <button type="submit">Compress</button>
         </form>
-
         <div id="image-preview"></div>
         
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='main.js')}}"></script>
         <h2>Let's work together...</h2>
         <p>To create amazing pictures.</p>
     </section>
